# manabrew-editorial

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile.web  GRAVEYARD_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  MERGE_RESOLUTION.md  Plan.md  QUICK_TEST.md  README.md  SECURITY.md  STYLE_GUIDELINES.md  TEST_VERIFICATION.md  THIRD-PARTY-NOTICES.md  build_parity_jar.sh  cliff.toml  compose.local.yml  compose.production.yml  compose.selfhost.yml  compose.staging.yml  deploy-local.sh  deploy-staging.sh  deploy.sh  eslint.config.js  features.md  index.html  n8n-webhook-workflow.json  nginx.web.conf  package-lock.json  (+6 more)
forge-engine/crates/forge-agent-interface/: Cargo.toml
forge-engine/crates/forge-agent-interface/src/: auto_pay.rs  deck_dto.rs  game_log_event.rs  game_view_dto.rs  ids_codec.rs  java_prompt_normalizer.rs  java_raw.rs  lib.rs  prompt.rs  protocol.rs  simple_ai.rs
forge-engine/crates/forge-bot/: Cargo.toml
forge-engine/crates/forge-bot/src/: lib.rs  native.rs  state.rs
forge-engine/crates/forge-card-script/: Cargo.toml  README.md
forge-engine/crates/forge-card-script-lsp/: Cargo.toml  README.md
forge-engine/crates/forge-card-script-lsp/src/: main.rs
forge-engine/crates/forge-card-script/src/: lib.rs
forge-engine/crates/forge-carddb/: Cargo.toml
forge-engine/crates/forge-carddb/examples/: verify_archive.rs
forge-engine/crates/forge-carddb/src/: card_rules.rs  database.rs  lib.rs  parser.rs
forge-engine/crates/forge-carddb/tests/: parse_all_cards.rs
forge-engine/crates/forge-cardset-archive/: Cargo.toml
forge-engine/crates/forge-cardset-archive/src/: build.rs  lib.rs
forge-engine/crates/forge-engine/: Cargo.toml
forge-engine/crates/forge-engine/src/: action.rs  activated_ability.rs  agent.rs  card.rs  card_trait_base.rs  combat.rs  core.rs  cost.rs  event.rs  game.rs  game_log.rs  game_log_entry.rs  game_log_entry_type.rs  game_log_formatter.rs  game_loop.rs  game_object.rs  game_rng.rs  game_snapshot.rs  ids.rs  layer.rs  lib.rs  lki.rs  mana_pool.rs  perf.rs  phase.rs  player.rs  replacement.rs  stack.rs  static_ability.rs  trigger.rs  trigger_handler.rs  zone.rs
forge-engine/crates/forge-engine/tests/: cancel_counterspell.rs  cards.rs  cleansing_wildfire_regression.rs  common_test_agent.rs  control_magic_aura.rs  counter_and_control.rs  first_game.rs  shock_counterspell_bug.rs  token_effects.rs  trigger_demo.rs  ui_counter_integration.rs  zone_change_effects.rs
forge-engine/crates/forge-game-runtime/: Cargo.toml
forge-engine/crates/forge-game-runtime/src/: deck.rs  host_runtime.rs  lib.rs  mpsc_transport.rs
forge-engine/crates/forge-parity/: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  parity_ignore.json  parity_regressions.md  regression.json
forge-engine/crates/forge-parity/src/: agent_loop.rs  analyzer.rs  auto_pay.rs  callback_fmt.rs  card_pool.rs  choice_space.rs  ci_client.rs  combat_choice_space.rs  comparator.rs  dashboard.html  deck_generator.rs  deterministic_agent.rs  discord.rs  github_issues.rs  gui_repro.rs  java_bridge.rs  java_cache.rs  java_random.rs  lib.rs  llm.rs  log_buffer.rs  main.rs  parity_card_map.rs  parity_compare.rs  parity_id.rs  parity_log.rs  parity_order.rs  perf.rs  protocol.rs  report.rs  runner.rs  runtime.rs  scheduler.rs  web.rs  (+2 more)
forge-engine/crates/forge-server/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  compose.yml
forge-engine/crates/forge-wasm/: Cargo.toml
forge-engine/crates/self-hosted-node/: Cargo.toml  Dockerfile
manabrew-rs/crates/forge-card-script-lsp/: Cargo.toml  README.md
manabrew-rs/crates/forge-carddb/: Cargo.toml
manabrew-rs/crates/forge-cardset-archive/: Cargo.toml
manabrew-rs/crates/manabot/: Cargo.toml
manabrew-rs/crates/manabrew-agent-interface/: Cargo.toml
manabrew-rs/crates/manabrew-engine/: Cargo.toml
manabrew-rs/crates/manabrew-game-runtime/: Cargo.toml
manabrew-rs/crates/manabrew-hub/: Cargo.toml  Dockerfile
manabrew-rs/crates/manabrew-protocol/: Cargo.toml
manabrew-rs/crates/manabrew-server/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md
manabrew-rs/crates/networking-tests/: Cargo.toml
manabrew-rs/crates/parity/: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md
manabrew-rs/crates/parity-debugger/: Cargo.toml  README.md
manabrew-rs/crates/self-hosted-node/: Cargo.toml  Dockerfile  build.rs
src-tauri/: .taurignore  AGENTS.md  Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/src/: ai_agent.rs  asset_server.rs  card_db.rs  client_bot.rs  commands.rs  engine_backend.rs  forge_room.rs  game_log_event.rs  game_manager.rs  game_snapshot_event.rs  game_view_dto.rs  lib.rs  limited_bootstrap.rs  limited_commands.rs  limited_dto.rs  limited_manager.rs  local_relay.rs  main.rs  multiplayer_controller.rs  network.rs  preset_decks.rs  prompt.rs  remote_agent.rs  server_client.rs  server_commands.rs  tauri_agent.rs  tauri_transport.rs
src-tauri/src/engine_backend/: java_backend.rs  rust_backend.rs
src-tauri/src/tauri_agent/: choices.rs  combat.rs  costs.rs  library.rs  mod.rs  targeting.rs
tree-sitter-forge-card-script/: Cargo.toml  LICENSE  README.md  grammar.js  grammar.ts  package.json  tree-sitter.json
tree-sitter-forge-card-script/bindings/rust/: build.rs  lib.rs
tree-sitter-forge-card-script/queries/: highlights.scm
tree-sitter-forge-card-script/src/: grammar.json  node-types.json  parser.c
tree-sitter-forge-card-script/test/corpus/: abilities.txt  basic.txt  faces.txt  svars.txt
xtask/: Cargo.toml
xtask/src/: apply.rs  cliff.rs  e2e_ui.rs  gen_types.rs  main.rs  manifest.rs  plan.rs  publish.rs  release.rs  util.rs  workspace.rs
(+2668 files in other folders)
