[workspace]
resolver = "2"
members = [
    "src-tauri",
    "forge-engine/crates/forge-foundation",
    "forge-engine/crates/forge-carddb",
    "forge-engine/crates/forge-engine-macros",
    "forge-engine/crates/forge-engine",
    "forge-engine/crates/forge-server",
    "forge-engine/crates/self-hosted-node",
    "forge-engine/crates/forge-game-runtime",
    "forge-engine/crates/forge-parity",
    "forge-engine/crates/forge-wasm",
    "forge-engine/crates/forge-agent-interface",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deunicode = "1"
