[workspace]
resolver = "2"
members = [
    "src-tauri",
    "tree-sitter-forge-card-script",
    "forge-engine/crates/forge-foundation",
    "forge-engine/crates/forge-card-script",
    "forge-engine/crates/forge-carddb",
    "forge-engine/crates/forge-engine-macros",
    "forge-engine/crates/forge-engine",
    "forge-engine/crates/forge-server",
    "forge-engine/crates/self-hosted-node",
    "forge-engine/crates/forge-game-runtime",
    "forge-engine/crates/forge-parity",
    "forge-engine/crates/forge-wasm",
    "forge-engine/crates/forge-agent-interface",
    "forge-engine/crates/forge-card-script-lsp",
    "forge-engine/crates/forge-engine-debugger",
    "forge-engine/crates/forge-cardset-archive",
    "forge-engine/crates/forge-limited",
]

[workspace.package]
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deunicode = "1"

# Release profile defaults — forge-wasm overrides via metadata for size-tuned builds.
[profile.release]
opt-level = "z"
lto = true
