[workspace]
resolver = "2"
members = [
    "src-tauri",
    "tree-sitter-forge-card-script",
    "manabrew-rs/crates/forge-foundation",
    "manabrew-rs/crates/forge-card-script",
    "manabrew-rs/crates/forge-carddb",
    "manabrew-rs/crates/manabrew-engine-macros",
    "manabrew-rs/crates/manabrew-engine",
    "manabrew-rs/crates/manabrew-protocol",
    "manabrew-rs/crates/manabrew-server",
    "manabrew-rs/crates/self-hosted-node",
    "manabrew-rs/crates/manabrew-game-runtime",
    "manabrew-rs/crates/parity",
    "manabrew-rs/crates/wasm",
    "manabrew-rs/crates/manabrew-agent-interface",
    "manabrew-rs/crates/forge-card-script-lsp",
    "manabrew-rs/crates/parity-debugger",
    "manabrew-rs/crates/forge-cardset-archive",
    "manabrew-rs/crates/forge-limited",
    "manabrew-rs/crates/manabot",
    "xtask",
]
exclude = [
    "packages/core",
    "packages/install",
    "packages/manabrew",
    "packages/protocol",
]

[workspace.package]
license = "AGPL-3.0-or-later"
repository = "https://github.com/witchesofthehill/manabrew"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deunicode = "1"
ts-rs = "10"

[profile.release]
opt-level = "z"
lto = true

[profile.parity]
inherits = "release"
debug-assertions = true

[profile.release.package.wasm]
opt-level = 3
