[package]
name = "manabrew"
version = "0.1.0"
edition = "2021"

[features]
java-forge = ["dep:j4rs"]

[lib]
name = "manabrew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
forge-cardset-archive = { path = "../forge-engine/crates/forge-cardset-archive", features = [
    "build",
] }
walkdir = "2"

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
forge-engine-core = { path = "../forge-engine/crates/forge-engine" }
forge-foundation = { path = "../forge-engine/crates/forge-foundation" }
forge-carddb = { path = "../forge-engine/crates/forge-carddb" }
forge-cardset-archive = { path = "../forge-engine/crates/forge-cardset-archive" }
memmap2 = "0.9"
rand = "0.8"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
forge-server = { path = "../forge-engine/crates/forge-server" }
forge-agent-interface = { path = "../forge-engine/crates/forge-agent-interface" }
forge-bot = { path = "../forge-engine/crates/forge-bot" }
forge-game-runtime = { path = "../forge-engine/crates/forge-game-runtime" }
forge-limited = { path = "../forge-engine/crates/forge-limited" }
tauri-plugin-http = "2.5.9"
j4rs = { version = "0.25.1", optional = true }
