[package]
name = "manabrew"
version = "0.5.2"
edition = "2021"

[features]
forge-room = ["dep:self-hosted-node"]

[lib]
name = "manabrew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
forge-cardset-archive = { path = "../manabrew-rs/crates/forge-cardset-archive", features = [
    "build",
] }
walkdir = "2"

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
manabrew-engine = { path = "../manabrew-rs/crates/manabrew-engine" }
forge-foundation = { path = "../manabrew-rs/crates/forge-foundation" }
forge-carddb = { path = "../manabrew-rs/crates/forge-carddb" }
forge-cardset-archive = { path = "../manabrew-rs/crates/forge-cardset-archive" }
memmap2 = "0.9"
rand = "0.8"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
manabrew-agent-interface = { path = "../manabrew-rs/crates/manabrew-agent-interface" }
manabrew-protocol = { path = "../manabrew-rs/crates/manabrew-protocol" }
forge-limited = { path = "../manabrew-rs/crates/forge-limited" }
tauri-plugin-http = "2.5.9"
self-hosted-node = { path = "../manabrew-rs/crates/self-hosted-node", default-features = false, features = [
    "graal-forge",
], optional = true }
