[package]
name = "forge-bot"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
forge-agent-interface = { path = "../forge-agent-interface" }
forge-engine-core = { path = "../forge-engine" }
forge-protocol = { path = "../forge-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt", "macros", "net"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
tracing = "0.1"
