[package]
name = "forge-card-script"
version = "0.1.0"
edition = "2021"
description = "Parser and intermediate representation for the Forge card-script DSL used by Magic: The Gathering rules engines"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["mtg", "magic", "forge", "parser", "dsl"]
categories = ["parser-implementations"]

[dependencies]
smallvec = "1"
winnow = "0.7"
