[package]
name = "forge-carddb"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-foundation = { path = "../forge-foundation" }
forge-card-script = { path = "../forge-card-script" }
serde = { workspace = true }
serde_json = { workspace = true }
deunicode = { workspace = true }

[dev-dependencies]
# for integration tests
