[package]
name = "forge-engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-foundation = { path = "../forge-foundation" }
forge-carddb = { path = "../forge-carddb" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
indexmap = "2"
typetag = "0.2"
dyn-clone = "1"
