[package]
name = "forge-engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-foundation = { path = "../forge-foundation" }
forge-carddb = { path = "../forge-carddb" }
forge-engine-macros = { path = "../forge-engine-macros" }
strum_macros = "0.28.0"
strum = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
indexmap = "2"
typetag = "0.2"
dyn-clone = "1"
