[package]
name = "forge-engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-foundation = { path = "../forge-foundation" }
forge-card-script = { path = "../forge-card-script" }
forge-carddb = { path = "../forge-carddb" }
forge-engine-macros = { path = "../forge-engine-macros" }
strum_macros = "0.28.0"
strum = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
indexmap = "2"
smallvec = "1"
typetag = "0.2"
dyn-clone = "1"
winnow = "0.7"

[dev-dependencies]
# Integration tests build synthetic 1-card archives for isolated parser tests.
forge-cardset-archive = { path = "../forge-cardset-archive" }
