[package]
name = "forge-game-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-agent-interface = { path = "../forge-agent-interface" }
forge-carddb = { path = "../forge-carddb" }
forge-engine-core = { path = "../forge-engine" }
forge-foundation = { path = "../forge-foundation" }
rand = "0.8"
