[package]
name = "forge-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forge-server"
path = "src/main.rs"

[dependencies]
forge-protocol = { path = "../forge-protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
socket2 = "0.5"
axum = "0.7"
