[package]
name = "self-hosted-node"
version = "0.1.0"
edition = "2021"

[features]
java-forge = ["dep:j4rs"]

[[bin]]
name = "self-hosted-node"
path = "src/main.rs"

[dependencies]
forge-agent-interface = { path = "../forge-agent-interface" }
forge-bot = { path = "../forge-bot" }
forge-carddb = { path = "../forge-carddb" }
forge-engine-core = { path = "../forge-engine" }
forge-foundation = { path = "../forge-foundation" }
forge-game-runtime = { path = "../forge-game-runtime" }
forge-server = { path = "../forge-server" }
memmap2 = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
j4rs = { version = "0.25.1", optional = true }
