[package]
name = "forge-cardset-archive"
version = "0.2.0"
edition = "2021"
license.workspace = true
description = "rkyv archive format for manabrew's pre-compiled cardset"

[features]
default = []
build = ["dep:walkdir", "dep:memmap2"]

[dependencies]
rkyv = { version = "0.7", features = ["validation"] }
forge-card-script = { path = "../forge-card-script", version = "0.1.0" }
memmap2 = { version = "0.9", optional = true }
walkdir = { version = "2", optional = true }

[[bin]]
name = "build-cardset-archive"
path = "src/bin/build.rs"
required-features = ["build"]

[[bin]]
name = "bench-cardset-archive"
path = "src/bin/bench.rs"
required-features = ["build"]
