[package]
name = "manabot"
version = "0.2.1"
edition = "2021"
license.workspace = true
description = "AI bot player for the manabrew engine"

[features]
default = ["native"]
native = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
manabrew-agent-interface = { path = "../manabrew-agent-interface", version = "0.2.1" }
manabrew-engine = { path = "../manabrew-engine", version = "0.2.0" }
manabrew-protocol = { path = "../manabrew-protocol", version = "0.4.0" }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt", "macros", "net"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }
