[package]
name = "manabrew-agent-interface"
version = "0.2.0"
edition = "2021"
license.workspace = true
description = "Prompt protocol between the manabrew engine and agents (UI, AI, network)"

[dependencies]
manabrew-protocol = { path = "../manabrew-protocol", version = "0.3.0" }
manabrew-engine = { path = "../manabrew-engine", version = "0.2.0" }
forge-foundation = { path = "../forge-foundation", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
tracing = "0.1"
strum = "0.28"
strum_macros = "0.28.0"
