[package]
name = "manabrew-engine"
version = "0.2.1"
edition = "2021"
license.workspace = true
description = "Magic: The Gathering rules engine — a Rust port of Forge"

[dependencies]
forge-foundation = { path = "../forge-foundation", version = "0.2.0" }
forge-card-script = { path = "../forge-card-script", version = "0.1.0" }
forge-carddb = { path = "../forge-carddb", version = "0.2.0" }
manabrew-engine-macros = { path = "../manabrew-engine-macros", version = "0.2.0" }
strum_macros = "0.28.0"
strum = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
indexmap = "2"
smallvec = "1"
typetag = "0.2"
dyn-clone = "1"
winnow = "0.7"

[dev-dependencies]
# Integration tests build synthetic 1-card archives for isolated parser tests.
forge-cardset-archive = { path = "../forge-cardset-archive" }
