[package]
name = "manabrew_game_runtime"
version = "0.2.0"
edition = "2021"
license.workspace = true
description = "Hosts N-player manabrew game sessions over a caller-supplied transport"

[dependencies]
manabrew-agent-interface = { path = "../manabrew-agent-interface", version = "0.2.0" }
manabrew-protocol = { path = "../manabrew-protocol", version = "0.3.0" }
forge-carddb = { path = "../forge-carddb", version = "0.2.0" }
manabrew-engine = { path = "../manabrew-engine", version = "0.2.0" }
forge-foundation = { path = "../forge-foundation", version = "0.2.0" }
rand = "0.8"
tracing = "0.1"
