[package]
name = "manabrew-protocol"
version = "0.3.0"
edition = "2021"
license.workspace = true
description = "Wire protocol for manabrew multiplayer"

[[bin]]
name = "gen-protocol"
path = "src/bin/gen_protocol.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
strum_macros = "0.28.0"
