[package]
name = "parity-debugger"
version = "0.2.1"
edition = "2021"
publish = false

[dependencies]
forge-card-script = { path = "../forge-card-script" }
forge-cardset-archive = { path = "../forge-cardset-archive" }
parity = { path = "../parity" }
tree-sitter-forge-card-script = { path = "../../../tree-sitter-forge-card-script" }
eframe = "0.29"
egui = "0.29"
memmap2 = "0.9"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
streaming-iterator = "0.1"
tree-sitter = "0.24"
